# kk_renderer

./: .gitignore  CMakeLists.txt  README.md  kk_renderer.sln  kk_renderer.vcxproj  kk_renderer.vcxproj.filters
demo/: main.cpp
include/kk_renderer/: Buffer.h  Camera.h  DirectionalLight.h  Editor.h  Geometry.h  GraphicsPipeline.h  Image.h  Mat4.h  Material.h  PerspectiveCamera.h  PipelineBuilder.h  Quat.h  Renderable.h  Renderer.h  RenderingContext.h  ResourceDescriptor.h  Scene.h  Shader.h  SwapChain.h  Swapchain.h  Texture.h  Transform.h  Vec2.h  Vec3.h  Vec4.h  Vertex.h  Window.h  kk_renderer.h
include/kk_renderer/loaders/: TextureLoader.h
include/kk_renderer/platform/: GlfwWindow.h
resources/shaders/: compile.bat  compile_shader.py  light.frag  light.frag.spv  light.vert  light.vert.spv  shadow.frag  shadow.vert  shadow.vert.spv  shadow_light.frag  shadow_light.frag.spv  shadow_light.vert  shadow_light.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  texture.frag  texture.frag.spv  texture.vert  texture.vert.spv  triangle.vert  triangle.vert.spv
src/: Buffer.cpp  Editor.cpp  Geometry.cpp  GraphicsPipeline.cpp  Image.cpp  Material.cpp  PerspectiveCamera.cpp  PipelineBuilder.cpp  Renderable.cpp  Renderer.cpp  RenderingContext.cpp  ResourceDescriptor.cpp  Scene.cpp  Shader.cpp  SwapChain.cpp  Swapchain.cpp  Texture.cpp  Vertex.cpp  Window.cpp
src/loaders/: TextureLoader.cpp
src/platform/: GlfwWindow.cpp
test/: CMakeLists.txt  draw_model_test.cpp  draw_texture_test.cpp  draw_triangle_test.cpp  editor_test.cpp  lib_link_test.cpp  lighting_test.cpp  rendering_loop_test.cpp  runner.cpp  scene_test.cpp  skybox_test.cpp
